# agent-dialogues

./: .codespellignore  .env.example  .gitignore  CITATION.cff  LICENSE  README.md  agentdialogues.toml  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: integration-tests.yml  unit-tests.yml
agentdialogues/: __init__.py  aggregate_logs.py  exceptions.py  sim_cli.py
agentdialogues/agents/: chat_agent.py  detoxify_agent.py
agentdialogues/analytics/: __init__.py  analysis.py  config.py  dataset_builder.py  plots.py  preprocessing.py  utils.py
agentdialogues/core/: base.py  bootstrap.py  utils.py
agentdialogues/utils/: __init__.py  args.py  config_loader.py  console_printer.py  dataset.py  dateset.py  module_loader.py  yaml_loader.py
notebooks/: ADD_YOUR_NOTEBOOKS_HERE.txt
sims/: baby-daddy.yaml
simulations/bap_chat/: bap_chat.py
simulations/bap_chat/scenarios/: baby-daddy.yaml
simulations/bap_cla_tox/: bap_cla_tox.py
simulations/bap_cla_tox/scenarios/: bap-cla-tox-001.yaml  bap-cla-tox-bl-01.yaml  bap-cla-tox-bl-02.yaml
src/: config.py  constants.py  domain.py  exceptions.py  run.py  sim-cli.py  sim_cli.py  utils.py
src/agents/: __init__.py  baby.py  daddy.py  dialogue_agent.py  simulation.py  simulation_agent.py
src/cli/: __init__.py  args.py  console_printer.py
src/sims/: baby-daddy.yaml
tests/integration_tests/: test_cli_dialogue_of_2_participants.py  test_simulation_bap_chat.py
tests/unit_tests/: test_aggregate_logs.py  test_domain.py  test_run.py  test_sim_cli.py  test_utils.py
tests/unit_tests/agents/: test_chat_agent.py  test_detoxify_agent.py  test_dialogue_agent.py  test_simulation_agent.py
tests/unit_tests/cli/: test_args.py  test_console_printer.py
tests/unit_tests/core/: test_base.py  test_bootstrap.py  test_utils.py
tests/unit_tests/utils/: test_args.py  test_console_printer.py  test_dataset.py  test_module_loader.py  test_yaml_loader.py
