[project]
name = "agentdialogues"
version = "0.1.0-alpha.1"
description = "Agent Dialogues: Multi-Agent Simulation Framework for AI Behavior Research"
authors = [
    { name = "Márk Tákacs", email = "mark.takacs@savalera.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.6.0",
    "argparse>=1.4.0",
    "detoxify>=0.5.2",
    "jupyterlab>=4.3.6",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.6",
    "matplotlib>=3.9.4",
    "mypy>=1.15.0",
    "notebook>=7.3.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "ruff>=0.9.7",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.73",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "types-pyyaml>=6.0.12.20250326",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[tool.mypy]
mypy_path = "."
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentdialogues"]
[tool.setuptools.package-dir]
"agentdialogues" = "agentdialogues"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
