[project]
name = "agentdialogues"
version = "0.1.0-alpha.2"
description = "Agent Dialogues: Multi-Agent Simulation Framework for AI Behavior Research"
authors = [
    { name = "Márk Tákacs", email = "mark.takacs@savalera.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.6.0",
    "argparse>=1.4.0",
    "detoxify>=0.5.2",
    "jupyterlab>=4.3.6",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.6",
    "matplotlib>=3.9.4",
    "notebook>=7.3.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.73",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.2.240807",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.7",
    "types-colorama>=0.4.15.20240311",
    "types-decorator>=5.2.0.20250324",
    "types-defusedxml>=0.7.0.20240218",
    "types-jsonschema>=4.23.0.20241208",
    "types-pexpect>=4.9.0.20241208",
    "types-psutil>=7.0.0.20250401",
    "types-pycurl>=7.45.6.20250309",
    "types-pygments>=2.19.0.20250305",
    "types-pyyaml>=6.0.12.20250326",
    "types-requests>=2.32.0.20250328",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[tool.mypy]
mypy_path = "."
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "detoxify"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentdialogues"]
[tool.setuptools.package-dir]
"agentdialogues" = "agentdialogues"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
